--- a/index.html
+++ b/index.html
@@ -62,53 +62,49 @@
 </head>
 <body>
   <header>
-    <h1>Rohith</h1>
+    <h1>Rohith Soundar</h1>
     <nav>
       <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Projects">Projects</a></li>
+        <li><a href="#Skills">Skills</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <section id="about">
+  <section id="About">
     <h2>About Me</h2>
     <p>I am Rohith, an aspiring AI Developer and Full-Stack Developer with expertise in web development and AI projects.</p>
   </section>
 
-  <section id="projects">
+  <section id="Projects">
     <h2>Projects</h2>
     <div>
       <h3>Flight Reservation System</h3>
       <p>A MySQL-based system for managing flight bookings.</p>
     </div>
-    <div>
-      <h3>Hackathon Project</h3>
-      <p>Created an AI-powered tool to solve XYZ problems.</p>
-    </div>
   </section>
 
-  <section id="skills">
+  <section id="Skills">
     <h2>Skills</h2>
     <ul>
       <li>Python</li>
       <li>Java</li>
       <li>HTML, CSS, JavaScript</li>
-      <li>React.js</li>
+      <li>C,C++</li>
       <li>MySQL</li>
     </ul>
   </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: rohith@example.com</p>
+  <section id="Contact">
+    <h2>Contact : +91 9677576122</h2>
+    <p>Email: rohithofficial944@gmail.com</p>
     <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
   </section>
 
   <footer>
-    <p>© 2025 Rohith</p>
+    <p>© 2025 Rohith Soundar</p>
   </footer>
 </body>
 </html>
