--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <section id="Contact">
     <h5>Contact : +91 9677576122</h5>
     <p>Email: rohithofficial944@gmail.com</p>
-    <a href="https://github.com/Coder-Rohith/Portfolio" target="_blank">My GitHub Profile</a>
+    <a href="https://github.com/Coder-Rohith" target="_blank">My GitHub Profile</a>
   </section>
 
   <footer>
