--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <h5>Contact : +91 9677576122</h5>
     <p>Email: rohithofficial944@gmail.com</p>
     <a href="https://github.com/Coder-Rohith" target="_blank">My GitHub Profile</a>
+    <a href="www.linkedin.com/in/rohith-soundar-167a54293" target="_main">My LinkedIn Profile</a>
   </section>
 
   <footer>
