--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <p>Email: rohithofficial944@gmail.com</p>
     <a href="https://github.com/Coder-Rohith" target="_blank">My GitHub Profile</a>
     <br>
-    <a href="https://www.linkedin.com/in/rohith-soundar-167a54293" target="_blank">My LinkedIn Profile</a>
+    <a href="https://www.linkedin.com/in/rohith-soundar" target="_blank">My LinkedIn Profile</a>
   </section>
 
   <footer>
